force-app/main/default/objects/INV_CO_Reminder__c/INV_CO_Reminder__c.object-meta.xml
<CustomObject>
    <label>Reminder</label>
    <nameField>
        <label>Reminder Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>