force-app/main/default/objects/INV_CO_Reminder__c/fields/INV_CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>INV_CompletionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completion Status</label>
    <type>Checkbox</type>
</CustomField>