force-app/main/default/objects/INV_CO_Reminder__c/fields/INV_Description__c.field-meta.xml
<CustomField>
    <fullName>INV_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>