force-app/main/default/objects/INV_CO_Reminder__c/fields/INV_DueDate__c.field-meta.xml
<CustomField>
    <fullName>INV_DueDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>