force-app/main/default/objects/INV_CO_Reminder__c/fields/INV_Owner__c.field-meta.xml
<CustomField>
    <fullName>INV_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>