force-app/main/default/objects/INV_CO_Reminder__c/fields/INV_ReminderDateTime__c.field-meta.xml
<CustomField>
    <fullName>INV_ReminderDateTime__c</fullName>
    <label>Reminder Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>