force-app/main/default/objects/INV_CO_Reminder__c/validationRules/INV_REM_VR01_FutureDueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>INV_REM_VR01_FutureDueDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
INV_ReminderDateTime__c &lt; NOW()
)</errorConditionFormula>
    <errorMessage>The reminder time should be in the future</errorMessage>
</ValidationRule>